--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.15.0"
 requests = "^2.25.1"
 pydantic = "^1.7.3"
 transitions = "^0.8.6"
+python-telegram-handler = "^2.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
