--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ injector = "^0.18.4"
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
 isort = "^5.7.0"
+wemake-python-styleguide = "^0.15.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
