handle if user blocked the bot, askforvote command added

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,4 +29,4 @@ check_untyped_defs = True
 ignore_missing_imports = True
 disallow_untyped_defs = True
 strict_equality = True
-plugins = sqlmypy,pydantic.mypy
+plugins = pydantic.mypy
