--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^1.7.3"
 transitions = "^0.8.6"
 python-telegram-handler = "^2.2"
 injector = "^0.18.4"
+matplotlib = "^3.3.4"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
