--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ transitions = "^0.8.6"
 python-telegram-handler = "^2.2"
 injector = "^0.18.4"
 matplotlib = {version = "^3.3.4", optional = true}
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
