--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -31,6 +31,7 @@ jobs:
           ${{ runner.os }}-buildx-
 
             - name: Build and push
+    - name: Build an image
       uses: docker/build-push-action@v2
       with:
         platforms: linux/arm
