--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -53,7 +53,7 @@ jobs:
     - name: 'Deploy'
       uses: 'deliverybot/helm@v1'
       with:
-        release: 'app'
+        release: 'bot'
         namespace: 'default'
         chart: '.ci/helm/charts'
         token: '${{ github.token }}'
