--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -57,5 +57,7 @@ jobs:
         namespace: 'default'
         chart: '.ci/helm/charts'
         token: '${{ github.token }}'
+        values: |
+          name: foobar
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
