Fix command in Dockerfile, update dockerimage.yml

--- a/.ci/helm/charts/templates/bot.yaml
+++ b/.ci/helm/charts/templates/bot.yaml
@@ -7,7 +7,7 @@ spec:
   - name: regcred
   containers:
   - name: bot
-    image: ghcr.io/vryazanov/russian-stock-bot:test
+    image: ghcr.io/vryazanov/russian-stock-bot:main
     env:
     - name: BOT_TOKEN
       value: "1551393970:AAH7-z8aoOamvRuan9b3Zb0L2z5ZUh7iN6g"
