--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -37,7 +37,7 @@ jobs:
         platforms: linux/arm
         context: .
         push: true
-        tags: ghcr.io/vryazanov/russian-stock-bot:test
+        tags: ghcr.io/vryazanov/russian-stock-bot:main
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
 
