use pvc to keep files

--- a/.ci/helm/charts/templates/bot.yaml
+++ b/.ci/helm/charts/templates/bot.yaml
@@ -3,18 +3,22 @@ kind: Pod
 metadata:
   name: bot
 spec:
+  volumes:
+    - name: pv-storage-bot
+      persistentVolumeClaim:
+        claimName: pvc-bot
   imagePullSecrets:
   - name: regcred
   containers:
   - name: bot
     image: ghcr.io/vryazanov/russian-stock-bot:main
     env:
-    - name: BOT_TOKEN
-      value: "1551393970:AAH7-z8aoOamvRuan9b3Zb0L2z5ZUh7iN6g"
-    - name: BOT_ADMIN_GROUP
-      value: "-459319778"
-    - name: STOCKS_BASE_URL
-      value: http://81.163.24.230:8000/
-    - name: STORAGE_PATH
-      value: /storage
+    {{- range $key, $value := .Values.public_env_variables }}
+      - name: {{ $key }}
+        value: {{ $value | quote }}
+    {{- end }}
     imagePullPolicy: Always
+    volumeMounts:
+      - mountPath: /mnt/storage
+        subPath: bot
+        name: pv-storage-bot
