--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -59,5 +59,9 @@ jobs:
         helm: helm3
         chart: '.ci/helm/charts'
         token: '${{ github.token }}'
+        value-files: >-
+        [
+          ".ci/helm/chart/values.yaml"
+        ]
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
