use correct storage class in pvc

--- a/.ci/helm/charts/templates/pvc.yaml
+++ b/.ci/helm/charts/templates/pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: pvc-bot
 spec:
-  storageClassName: local-storage
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
