--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -53,11 +53,11 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
     - name: Set staging env
-      # if: startsWith(github.ref, 'ref/heads/')
+      if: startsWith(github.ref, 'refs/heads/')
       run: |
         echo "KUBE_NAMESPACE=staging" >> $GITHUB_ENV
     - name: Set production env
-      if: startsWith(github.ref, 'ref/tags/')
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         echo "KUBE_NAMESPACE=production" >> $GITHUB_ENV
     - name: Checkout
