--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -55,10 +55,13 @@ jobs:
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Run custom scrupts
       run: |
         ls -l /app
         which helm
+        which git
   # deployment:
   #   needs: docker
   #   runs-on: 'ubuntu-latest'
