--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -55,7 +55,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Run custom scripts
       run: |
-        docker run -v .:/application -e KUBE_CONFIG="${{ secrets.KUBE_CONFIG }}" chatwork/argocd-helmfile:2.0.3-0.139.8 ls -l /application
+        docker run -v ${PWD}:/application -e KUBE_CONFIG="${{ secrets.KUBE_CONFIG }}" chatwork/argocd-helmfile:2.0.3-0.139.8 ls -l /application
 
   # deployment:
   #   needs: docker
