change deployment script

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -60,7 +60,7 @@ jobs:
           -v ${PWD}:/application \
           -e KUBE_CONFIG="${{ secrets.KUBE_CONFIG }}" \
           chatwork/argocd-helmfile:2.0.3-0.139.8 \
-          bash /application/test.sh
+          ls -l /application/
 
   # deployment:
   #   needs: docker
