--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -56,8 +56,10 @@ jobs:
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
+        regitry: index.docker.io
         image: chatwork/argocd-helmfile:2.0.3-0.139.8
         options: -v ${{ github.workspace }}:/app -e KUBE_CONFIG="${{ secrets.KUBE_CONFIG }}"
+        shell: bash
         run: |
           ls -l /application/
           bash /application/test.sh
