--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -58,7 +58,7 @@ jobs:
       with:
         image: chatwork/argocd-helmfile:2.0.3-0.139.8
         options: -v ${{ github.workspace }}:/app
-        run: ls -l /app/
+        run: bash /app/test.sh
 
   # deployment:
   #   needs: docker
