--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -55,7 +55,9 @@ jobs:
       uses: actions/checkout@v2
     - name: Prepare k8s creds
       run: |
-        "${{ secrets.KUBE_CONFIG }}" >> ./kubeconfig
+        echo "$KUBECONFIG_FILE" > ./kubeconfig
+      env:
+        KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
