--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -62,8 +62,8 @@ jobs:
       uses: addnab/docker-run-action@v3
       with:
         image: chatwork/argocd-helmfile:2.0.3-0.139.8
-        # options: -v ${{ github.workspace }}:/app -v ${{ github.workspace }}/.kubeconfig:/home/argocd/.kube/config
-        run: ls -l /home/argocd/.kube/
+        options: -v ${{ github.workspace }}:/app -v ${{ github.workspace }}/.kubeconfig:/home/argocd/.kube/config
+        run: ls -l /home/argocd/.kube/config
 
   # deployment:
   #   needs: docker
