--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -55,15 +55,15 @@ jobs:
       uses: actions/checkout@v2
     - name: Prepare k8s creds
       run: |
-        echo "$KUBECONFIG_FILE" > ./kubeconfig
+        echo "$KUBECONFIG_FILE" > ${{ github.workspace }}/kubeconfig
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
         image: chatwork/argocd-helmfile:2.0.3-0.139.8
-        options: -v ${{ github.workspace }}:/app -v ${{ github.workspace }}/:/home/argocd/.kube/
-        run: ls -l /home/argocd/.kube/
+        options: -v ${{ github.workspace }}:/app -v ${{ github.workspace }}/kubeconfig:/home/argocd/.kube/config
+        run: cat /home/argocd/.kube/config
 
   # deployment:
   #   needs: docker
