--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -56,14 +56,17 @@ jobs:
     - name: Prepare k8s creds
       run: |
         echo "$KUBECONFIG_FILE" > ${{ github.workspace }}/kubeconfig
+        echo "$GPG_PRIVATE_KEY" > ${{ github.workspace }}/gpg.key
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
         image: chatwork/argocd-helmfile:2.0.3-0.139.8
-        options: -v ${{ github.workspace }}:/app -v ${{ github.workspace }}/kubeconfig:/home/argocd/.kube/config
-        run:  kubectl get ns
+        options: |
+          -v ${{ github.workspace }}:/app
+          -v ${{ github.workspace }}/kubeconfig:/home/argocd/.kube/config
+        run: base64 -d ./gpg.key | gpg --import
 
   # deployment:
   #   needs: docker
