--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -66,7 +66,7 @@ jobs:
         options: |
           -v ${{ github.workspace }}:/app
           -v ${{ github.workspace }}/kubeconfig:/home/argocd/.kube/config
-        run: ls -l .  # base64 -d ./gpg.key | gpg --import
+        run: base64 -d /app/gpg.key | gpg --import
 
   # deployment:
   #   needs: docker
