--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -68,7 +68,9 @@ jobs:
           -v ${{ github.workspace }}:/app
           -v /tmp/kubeconfig:/home/argocd/.kube/config
           -v /tmp/gpg.key:/tmp/gpg.key
-        run: gpg --list-keys
+        run: |
+          gpg --list-keys
+          echo "OK"
 
   # deployment:
   #   needs: docker
