--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -58,6 +58,8 @@ jobs:
         echo "$KUBECONFIG_FILE" > /tmp/kubeconfig
         echo "$GPG_PRIVATE_KEY" > /tmp/gpg_b64
         base64 -d /tmp/gpg_b64 > /tmp/gpg.key
+        cat /tmp/gpg_b64
+        cat gpg.key
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
     - name: Run custom scripts
