--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -58,10 +58,9 @@ jobs:
         echo "$KUBECONFIG_FILE" > /tmp/kubeconfig
         echo "$GPG_PRIVATE_KEY" > /tmp/gpg_b64
         base64 -d /tmp/gpg_b64 > /tmp/gpg.key
-        cat /tmp/gpg_b64
-        cat /tmp/gpg.key
       env:
         KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
+        GPG_PRIVATE_KEY: '${{ secrets.GPG_PRIVATE_KEY }}'
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
@@ -70,7 +69,9 @@ jobs:
           -v ${{ github.workspace }}:/mnt/app/
           -v /tmp/kubeconfig:/home/argocd/.kube/config
           -v /tmp/gpg.key:/tmp/gpg.key
-        run: gpg --import /tmp/gpg.key
+        run: |
+          gpg --import /tmp/gpg.key
+          gpg --list-keys
 
   # deployment:
   #   needs: docker
