--- a/.ci/helm/secrets.staging.values.yaml
+++ b/.ci/helm/secrets.staging.values.yaml
@@ -1,32 +1,32 @@
 secret_env_variables:
-    BOT_TOKEN: ENC[AES256_GCM,data:xWx9uIJR9Aeu0mV6qfHgQ3qQh4jiio9nn0GBseW1dHVDpmewtT0n489I/S1Hlw==,iv:yuobM4FYjT8tQeX2AoNVfAOCRlADxA1GlkT6UIrcMBs=,tag:wAUDiOGiQkjtPtEcCJBCkw==,type:str]
-    BOT_ADMIN_GROUP: ENC[AES256_GCM,data:x1Qf9vu9qKvlpw==,iv:zLdmzn0tPBWdK3VYsj456I2TwfsmditLFeOkKCErlnw=,tag:0XBC/w+Yn0+Ju3pk1ba6Nw==,type:str]
+    BOT_TOKEN: ENC[AES256_GCM,data:11JeCLRdz6DDo+8t6q9Fc5aFvfrl7ceNr9bceqnEqPLNpw1tu0DJUB9r0QmFRw==,iv:a0ZAIzz0W8Ie7hf7GWRxmC9D0In+oSRqTc+4t9djjUA=,tag:7GLrXbqOHBeTUhtxKFOB8Q==,type:str]
+    BOT_ADMIN_GROUP: ENC[AES256_GCM,data:I4S/6MqnwKqTEg==,iv:JKC8tlT5/2H6I+zQnkHeZ3rOZNXh+CpJ8Kutv1PFnw4=,tag:eEiDHOnjQs8IaZtnIHWh/g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-12T12:07:55Z"
-    mac: ENC[AES256_GCM,data:+es+cVUZslyix+HPiNaA6NqrMEvECYHr6LoLy6VIdF+hb7ycKBHZK8UcnSDLiKM1NdS21Q2jYdORDwLfOIWY3z5vEusMCmq046Rn/IDpfIEtdx/aNoAsIuxAI7R+ymmV1/4BgD/GGrxRdfrWKnojbiEK7bYEPO0k+tTcw2sp39I=,iv:zYIaaVcc/QPJ7kwEg2yEHFWFNnD7JJqIC0VDRjeoZqk=,tag:WWixDaNQdvfhZKpNQsic4w==,type:str]
+    lastmodified: "2021-06-19T14:25:21Z"
+    mac: ENC[AES256_GCM,data:JQ8WLT+ewpZA/H2VmFONdzjFiCuHsL2wYj7O5CF2L/lk0tPhcAHLuHizPk9RaRmKyycNNj9urpl2XxW6hgceMC9sJZ815v4bEkD+OWpMxzkCle83+KA1QJyAsCJ0B2KSX1xSDqQRXjVAN6Nt3vgACqqK5rf/rXZ8O4uJRswc3GE=,iv:xnSdF5fIukQolp7kHAPLZ74TvViVVQxPqOW+pr64tG8=,tag:RNwlSBMKIv08oKQWjTEkMQ==,type:str]
     pgp:
-        - created_at: "2021-06-07T14:21:02Z"
+        - created_at: "2021-06-19T14:23:22Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMAx4fLoWLcSOqAQv+OnKZibR35xUtr+Z60rGTIr+nejNpNgerUEtyIsMTqxhZ
-            Fq9wqPWyhmdNlI0lkyhqGEg6CX0811w6lISw/rpc77BksABJ10Po3djIWnES9mN0
-            LDuqYDB9reLx9D0B2Zdeb6i4tWaXWCIF2BBJyFx/mzQf6TxzUrnGQQLSOm8MVzbM
-            WZfoj0F19OuTCtgFt3r0zMPy5TUTA7G2HwgAhOSs7VtRU4Z3NKPtMNBOVybTRGu7
-            lPYEN8qkf2KzCxpKhi4ucbrSn+v7GUlstiUPKZaXnOlaGJqvQbGzrBFyyW5ev/v2
-            BzOmXiJZpoKptwPQ/JNLfkm3kG85P4xtJ/8P0eGQME8dTlyErIfSVPFU+RK0wWUy
-            MnJd4S6ip5OZJXyjSes/P8TdRIJs9+35tA339J6qy8SJtwcZ1VJ27BdwFy132Xhr
-            AHN5eTBSDZ5Shwe8dY/pPjJ3cXH5Be1Ff/Nnilh0qU/ll4p9NZ82C0JIHgy7zaEU
-            Mg5k8/lL793e0qbrvVAg0l4BLDrumFxUk7mHzbNf+Po8sh+JcxofmXNdVKjT0N52
-            35P2SK3/ZbkzvmH0iv5WNSsE4oMmh9vznxw5b+FMUhu1WvZtxXPMdERTFd7fyQq0
-            uFQMnlYR3blmIJ/uOQQu
-            =Yv7O
+            hQGMA/r/33/eWVcdAQwAlMiGZxAXrA3zO6VdMpFLq+S/mfpL1bwCHnIaQheAn5yD
+            2bseObeH70a9Av4jIeFSC7u/1gAV55EoW/I8BsoZaLlhr8LKhCz1stNz+LS6Ygb9
+            /HIHagAU3mFX4HWkDqZ+C5v4Gn4GQq8qsZehfM/2jYVx07MPNgs2exaWGkVnEmRE
+            Lp/aLT8C6NBDIQ7tiqYavKn6KTSjvWFyAsf72LX+P3q2Y6DWm/XVbYHSIdDxRIxr
+            lP1HV0cUBh3qqAZvmBap4WHneJW+I6uVW21MzHj+oPyaCHvfs7TUXi+tTP+Id/5Q
+            Ue5wgFApsXnS18to0m+NkXm+3U7OY3F0AavAuQJI2JuNbzQXa0nUt86xE2sTt/mC
+            sGatykI6sFg6kLJZVWk7A0/lrB+B+PtAo5ptKF3HathBQayZOOaeu1Zd695snYdG
+            Dk9fQqKXtDGHQVYPfmhhVaBFOg4E7wSfoxPsui2sjnrxbe7NMwkdUu7Gq/Z/iCMk
+            qpm0tfIceFe4XGJy9EYs0lwB7NILGIT1B9lZTiNJsd2nV/8YX79wiLO7Ne3ys3Ry
+            TYeq55FRFWHLPjTMDkci6W7qmPTG4YAvoAruWZGjQLlE9mttIcbiDg1+E+24+JU8
+            j5VKAXMQFVV+nJkwLg==
+            =0ZPr
             -----END PGP MESSAGE-----
-          fp: 19EAC32B8F6C02532B75314C875C8DA6799145A8
+          fp: DC5BD0445E93FB8BC9B73DB6B7DC290B51D14134
     unencrypted_suffix: _unencrypted
     version: 3.7.1
