--- a/.ci/helm/chart/templates/bot.yaml
+++ b/.ci/helm/chart/templates/bot.yaml
@@ -1,25 +1,34 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: bot
 spec:
-  volumes:
-    - name: pv-storage-bot
-      persistentVolumeClaim:
-        claimName: pvc-bot
-  containers:
-  - name: bot
-    image: ghcr.io/vryazanov/russian-stock-bot:{{ .Values.image_tag }}
-    env:
-    {{- range $key, $value := .Values.public_env_variables }}
-      - name: {{ $key }}
-        value: {{ $value | quote }}
-    {{- end }}
-    {{- range $key, $value := .Values.secret_env_variables }}
-      - name: {{ $key }}
-        value: {{ $value | quote }}
-    {{- end }}
-    imagePullPolicy: Always
-    volumeMounts:
-      - mountPath: /mnt/storage
-        name: pv-storage-bot
+  replicas: 1
+  selector:
+    matchLabels:
+      kubernetes.io/hostname: pi-control
+  template:
+    metadata:
+      labels:
+        kubernetes.io/hostname: pi-control
+    spec:
+      containers:
+      - name: bot
+        image: ghcr.io/vryazanov/russian-stocks-bot:{{ .Values.image_tag }}
+        env:
+        {{- range $key, $value := .Values.public_env_variables }}
+          - name: {{ $key }}
+            value: {{ $value | quote }}
+        {{- end }}
+        {{- range $key, $value := .Values.secret_env_variables }}
+          - name: {{ $key }}
+            value: {{ $value | quote }}
+        {{- end }}
+        imagePullPolicy: Always
+        volumeMounts:
+          - mountPath: /mnt/storage
+            name: pv-storage-bot
+      volumes:
+        - name: pv-storage-bot
+          persistentVolumeClaim:
+            claimName: pvc-bot
