--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -77,6 +77,7 @@ jobs:
           -v ${{ github.workspace }}:/mnt/app/
           -v /tmp/kubeconfig:/home/argocd/.kube/config
           -v /tmp/gpg.key:/tmp/gpg.key
+          -u root
         run: |
           curl -o /usr/local/bin/sops -L https://github.com/mozilla/sops/releases/download/v3.7.1/sops-v3.7.1.linux
           gpg --import /tmp/gpg.key
